--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
+dj-database-url==0.5.0
 Django==3.2.11
+django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.3
+psycopg2==2.9.3
 pytz==2021.3
 requests==2.27.1
 sqlparse==0.4.2
